[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }
hex = { version = "0.4.3" }
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
sha2 = { version = "0.10.8" }

[profile.release]
lto = "thin"
